Finalized functionality for commands, and implemented remaining needed methods. Tag management functionality is now ready for testing.